--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,14 +39,14 @@ dependencies:
   animate_do: 3.3.4
   animations: ^2.0.7
   flutter_svg: ^2.0.10+1
-  google_fonts: ^6.2.1
+  google_fonts: ^6.3.3
   flutter_screenutil: ^5.6.0
   cached_network_image: ^3.4.0
   flutter_staggered_grid_view: ^0.6.2
 
   # HTTP Client
-  dio_smart_retry: ^6.0.0
-  dio: ^5.4.1
+  dio_smart_retry: ^7.0.1
+  dio: ^5.9.0
   connectivity_plus: ^6.0.3
 
   # State Management
@@ -63,14 +63,14 @@ dependencies:
 
   # Model
   json_annotation: ^4.9.0
-  freezed_annotation: ^2.4.4
+  freezed_annotation: ^3.1.0
 
   # Routing
-  auto_route: ^9.3.0+1
+  auto_route: ^11.0.0
 
   # Additional
-  image_picker: ^1.1.0
-  logger: ^2.1.0
+  image_picker: ^1.2.1
+  logger: ^2.6.2
   flutter_launcher_icons: 0.13.1
 
 dev_dependencies:
@@ -83,10 +83,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
-  json_serializable: ^6.8.0
-  freezed: ^2.4.6
-  build_runner: ^2.4.7
-  auto_route_generator: ^9.3.1
+  json_serializable: ^6.9.4
+  freezed: ^3.2.3
+  build_runner: ^2.10.4
+  auto_route_generator: ^10.4.0
   change_app_package_name: ^1.4.0
 
 flutter_launcher_icons:
